Some bugs fixed,navigation map created and something else

--- a/app/src/main/res/layout/activity_buyer.xml
+++ b/app/src/main/res/layout/activity_buyer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.launcher.myapplication.Options">
+    tools:context="com.example.launcher.myapplication.Buyer">
 
     <Button
         android:id="@+id/matchingbtn"
