--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.launcher.myapplication.NewCarpet">
+    tools:context="com.example.launcher.myapplication.Seller">
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="383dp"
         android:layout_height="456dp"
         android:layout_marginEnd="8dp"
