--- a/app/src/main/res/layout/design_new_carpet.xml
+++ b/app/src/main/res/layout/design_new_carpet.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="تایید و طراحی"
         app:layout_constraintBottom_toTopOf="@+id/result"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,20 +40,22 @@
         android:layout_width="67dp"
         android:layout_height="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginTop="56dp"
         android:text="همسایگی:"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="202dp" />
+        app:layout_constraintTop_toBottomOf="@+id/areas_count" />
 
     <EditText
         android:id="@+id/neighbour1"
         android:layout_width="57dp"
         android:layout_height="33dp"
         android:layout_marginEnd="12dp"
+        android:layout_marginTop="56dp"
         android:ems="10"
         android:inputType="numberPassword"
         app:layout_constraintEnd_toStartOf="@+id/textView"
-        tools:layout_editor_absoluteY="202dp" />
+        app:layout_constraintTop_toBottomOf="@+id/areas_count" />
 
     <EditText
         android:id="@+id/neighbour2"
@@ -72,22 +74,24 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
         android:text="تایید همسایگی"
         android:textSize="10sp"
         app:layout_constraintEnd_toStartOf="@+id/neighbour2"
         app:layout_constraintHorizontal_bias="0.387"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="195dp" />
+        app:layout_constraintTop_toBottomOf="@+id/set" />
 
     <Button
         android:id="@+id/set"
         android:layout_width="61dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="100dp"
         android:text="تنظیم"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="100dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/result"
