--- a/app/src/main/res/layout/activity_buyer.xml
+++ b/app/src/main/res/layout/activity_buyer.xml
@@ -6,38 +6,38 @@
     android:layout_height="match_parent"
     tools:context="com.example.launcher.myapplication.Buyer">
 
-    <Button
-        android:id="@+id/matchingbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout2"
+        android:layout_width="0dp"
+        android:layout_height="52"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/shop_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="خرید" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/search_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="جستجو" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/navigation_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="مسیریابی" />
+    </android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
+        android:layout_width="0dp"
+        android:layout_height="499dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="65dp"
-        android:text="matching carpets"
-        app:layout_constraintBottom_toTopOf="@+id/shoppingbtn"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.039" />
-
-    <Button
-        android:id="@+id/shoppingbtn"
-        android:layout_width="159dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="36dp"
-        android:text="shopping carpets"
-        app:layout_constraintBottom_toTopOf="@+id/directionbtn"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
-        android:id="@+id/directionbtn"
-        android:layout_width="156dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="232dp"
-        android:text="direction"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
