--- a/app/src/main/res/layout/activity_buyer.xml
+++ b/app/src/main/res/layout/activity_buyer.xml
@@ -9,7 +9,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout2"
         android:layout_width="0dp"
-        android:layout_height="52"
+        android:layout_height="52dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -34,10 +34,13 @@
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/buyer_viewPager"
         android:layout_width="0dp"
-        android:layout_height="499dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout2"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
