--- a/app/src/main/res/layout/change_carpet.xml
+++ b/app/src/main/res/layout/change_carpet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.launcher.myapplication.ChangeNewCarpet">
+    tools:context="com.example.launcher.myapplication.Seller">
 
     <ImageView
         android:id="@+id/carpet1image"
