--- a/app/src/main/res/layout/shopping_carpet.xml
+++ b/app/src/main/res/layout/shopping_carpet.xml
@@ -35,11 +35,26 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="0dp"
-        android:layout_height="203dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="175dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resText"
+        app:layout_constraintVertical_bias="0.733" />
+
+    <TextView
+        android:id="@+id/resText"
+        android:layout_width="325dp"
+        android:layout_height="92dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:singleLine="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/submitMoney" />
 </android.support.constraint.ConstraintLayout>
