--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -39,6 +39,12 @@
             android:layout_height="wrap_content"
             android:text="@string/change_tab_name" />
 
+        <android.support.design.widget.TabItem
+            android:id="@+id/add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_tab_name" />
+
     </android.support.design.widget.TabLayout>
 
 </android.support.constraint.ConstraintLayout>
