--- a/app/src/main/res/layout/add_carpet.xml
+++ b/app/src/main/res/layout/add_carpet.xml
@@ -36,7 +36,7 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="254dp"
-        android:layout_height="75dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
